[gd_scene load_steps=10 format=1]

[ext_resource path="res://research.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://blacker_than_night.png" type="Texture" id=3]
[ext_resource path="res://game_background.png" type="Texture" id=4]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=5]
[ext_resource path="res://lower.png" type="Texture" id=6]
[ext_resource path="res://dani_alpha.fnt" type="BitmapFont" id=7]
[ext_resource path="res://raise.png" type="Texture" id=8]
[ext_resource path="res://button.png" type="Texture" id=9]

[node name="research" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.0230291, 0.748969 )
transform/scale = Vector2( 0.0500376, 0.0639588 )
texture = ExtResource( 2 )

[node name="input_background_black" type="Sprite" parent="."]

transform/pos = Vector2( 16.2072, 3.92586 )
transform/scale = Vector2( 0.0124636, 0.0132944 )
texture = ExtResource( 3 )

[node name="input_background_gray" type="Sprite" parent="."]

transform/pos = Vector2( 16.2446, 3.92586 )
transform/scale = Vector2( 0.00886298, 0.0177259 )
texture = ExtResource( 4 )

[node name="label" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.175, 0.175 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -23.0
margin/right = 145.0
margin/bottom = 28.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Researching:"
visible_characters = -1

[node name="research_goal_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = -23.0
margin/right = 188.0
margin/bottom = 72.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Current Research Goal."
visible_characters = -1

[node name="research_fund" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = -8.0
margin/right = 167.0
margin/bottom = 27.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Research Fund:"
visible_characters = -1

[node name="research_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = -8.0
margin/right = 157.0
margin/bottom = 48.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="daily_research" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = 0.0
margin/right = 163.0
margin/bottom = 52.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Daily Spending:"
visible_characters = -1

[node name="research_lower" type="TextureButton" parent="."]

rect/scale = Vector2( 0.2, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 1.0
margin/right = 28.0
margin/bottom = 19.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="daily_research_output_gray" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 2.0
margin/right = 134.0
margin/bottom = 54.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.777344, 0.777344, 0.777344, 1 )
bbcode/enabled = true
bbcode/bbcode = "0"
visible_characters = -1

[node name="daily_research_output_black" type="RichTextLabel" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -1.0
margin/right = 138.0
margin/bottom = 51.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = true
bbcode/bbcode = "0"
visible_characters = -1

[node name="research_raise" type="TextureButton" parent="."]

rect/scale = Vector2( 0.2, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 1.0
margin/right = 40.0
margin/bottom = 19.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="days_left" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -22.0
margin/top = 9.0
margin/right = 128.0
margin/bottom = 60.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = "Days Left:"
visible_characters = -1

[node name="days_left_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.15 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 9.0
margin/right = 159.0
margin/bottom = 61.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.576471, 0.235294, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="debounce" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="confirm" type="LinkButton" parent="."]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = 20.0
margin/right = 99.0
margin/bottom = 52.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Confirm"
underline = 2

[node name="Sprite" type="Sprite" parent="confirm"]

visibility/behind_parent = true
transform/pos = Vector2( 51.5508, 13.6423 )
transform/scale = Vector2( 0.547186, 0.390622 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_down" from="research_lower" to="." method="_on_research_lower_button_down"]

[connection signal="button_down" from="research_raise" to="." method="_on_research_raise_button_down"]

[connection signal="button_down" from="confirm" to="." method="_on_confirm_button_down"]


